[metadata]
name = promenade
summary = 'Promenade is a tool for bootstrapping a resilient '
          'Kubernetes cluster and managing its life-cycle via '
          'Helm charts.
description-file = README.md
author = The Airship Authors
author-email = airship-discuss@lists.airshipit.org
home-page = https://github.com/openstack/airship-promenade

classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    promenade
data_files =
    schemas = schemas/*
    templates = templates/*

[entry_points]
console_scripts =
    promenade=promenade.cli:promenade
