[metadata]
name = promenade
version = 1.1
summary = Promenade is a tool for bootstrapping a resilient kubernetes cluster and managing its life-cycle via helm charts.
description_file = README.md
author = The Airship Authors
author_email = airship-discuss@lists.airshipit.org
home_page = https://opendev.org/airship/promenade

classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.10

[files]
packages =
    promenade
data_files =
    schemas = schemas/*
    templates = templates/*

[entry_points]
console_scripts =
    promenade=promenade.cli:promenade
